--- a/index.html
+++ b/index.html
@@ -21,22 +21,28 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary
         <h1 id="alexandra-etienne">Alexandra Etienne</h1>
 <h2 id="customer-relations-and-marketing">Customer Relations and Marketing</h2>
 <blockquote>
-<p>Email : <a href="mailto:andravelilla@gmail.com">andravelilla@gmail.com</a><br>Twitter: <a href="http://twitter.com/andraconnect">@andraconnect</a></p>
+<p>Email : <a href="mailto:andravelilla@gmail.com">andravelilla@gmail.com</a><br>Twitter: <a href="http://twitter.com/andraconnect">@andraconnect</a><br>Fluent in English, French and Spanish</p>
 </blockquote>
 <hr>
 <h3 id="professional-experience">Professional Experience</h3>
-<p><strong>Product Specialist at Apple</strong> - june 2014 to april 2015 - Paris, France<br>        Part time- Advising international customers on Apple products.<br>        Managing customer relations during the sale process.<br>        Participating in meetings and implementing strategies to improve<br>        customer experience at Apple Store Opera.</p>
-<p><strong>Sales and Marketing Assistant at Autogrill du Louvre</strong> - july 2009 to june 2014 - Paris, France<br>        Part time - Managing business relationships and negotiating potential partnerships.<br>        Networking with a range of stakeholders and customers (agencies and groups of international tourists).<br>        Organising catering events for customers.<br>        Implementing and developing a commercial and communication strategy to increase sales.<br>        Conducting market studies. Organising and translating marketing material.<br>        Administrative work (planning and billing)</p>
-<p><strong>International Exchange Coordinator at OSEF</strong> - january 2012 to july 2013 - Paris, France<br>        Part time - Coordinator and Tour guide in Europe and in Canada for an<br>        association that organises reciprocal student exchanges.<br>        Travelling and meeting academic institutions to find partnerships for the association.<br>        Organising itineraries for participants.</p>
+<p><strong>Product Specialist at Apple</strong> - june 2014 to april 2015 - Paris, France<br>        Advising international customers on Apple products.<br>        Managing customer relations during the sale process.<br>        Participating in meetings and implementing strategies to improve<br>        customer experience at Apple Store Opera.</p>
+<p><strong>Sales and Marketing Assistant at Autogrill du Louvre</strong> - july 2009 to june 2014 - Paris, France<br>        Managing business relationships and negotiating potential partnerships.<br>        Networking with a range of stakeholders and customers (agencies and groups of international tourists).<br>        Organising catering events for customers.<br>        Implementing and developing a commercial and communication strategy to increase sales.<br>        Conducting market studies. Organising and translating marketing material.<br>        Administrative work (planning and billing)</p>
+<p><strong>International Exchange Coordinator at OSEF Tourism</strong> - january 2012 to july 2013 - Part time - Paris, France<br>        It is an association that organises reciprocal student exchanges.<br>        Travelling and meeting academic institutions to find partnerships<br>        Coordinator and Tour guide in Europe and in Canada for our students</p>
+<hr>
+<ul>
+<li>description too long for the first two</li>
+<li>it is repeatitive</li>
+<li>could be more pushy, less bullshit</li>
+</ul>
 <hr>
 <h3 id="education">Education</h3>
-<p><strong>Master&#39;s Degree &quot;Business Management&quot;</strong> <strong>2011 to 2012</strong><br>        Specialisation: International Tourism and Management<br>        University Paris 13 Nord- France </p>
-<p><strong>Master&#39;s Degree &quot;Business Administration and International Exchanges&quot;</strong> <strong>2010 to 2011</strong><br>        Specialisation: International Hospitality and Tourism management<br>        UPEC Paris XII Val de Marne- France</p>
+<p><strong>Master&#39;s Degree &quot;Business Management&quot;</strong> <strong>2011 to 2012</strong><br>        Specialisation: International Tourism and Management<br>        University Paris 13 Nord - France </p>
+<p><strong>Master&#39;s Degree &quot;Business Administration and International Exchanges&quot;</strong> <strong>2010 to 2011</strong><br>        Specialisation: International Hospitality and Tourism management<br>        UPEC Paris XII Val de Marne - France</p>
 <p><strong>Bachelor&#39;s Degree &quot;International Business and Commerce&quot;</strong> <strong>2007 to 2010</strong><br>        UPEC AEI Paris XII Val de Marne- France<br>        International exchange program with University del Norte - Colombia 2005 to 2007</p>
 <p><strong>High School Diploma - Valedictorian</strong> <strong>2005</strong><br>        ASPAEN International School Los Corales - Colombia</p>
 <hr>
 <h3 id="interests">Interests</h3>
-<p><strong>Language Skills</strong> : Fluent in English, French and Spanish</p>
+<p><strong>Language Skills</strong> : Fluent in English, French and Spanish, conversant in Italian or Portugese</p>
 <p><strong>Travels</strong> : Canada, France, Switzerland, Spain, Italy, USA, Colombia, Argentina.</p>
 
     </div>
