--- a/index.html
+++ b/index.html
@@ -26,14 +26,8 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary
 <hr>
 <h3 id="professional-experience">Professional Experience</h3>
 <p><strong>Product Specialist at Apple</strong> - june 2014 to april 2015 - Paris, France<br>        Advising international customers on Apple products.<br>        Managing customer relations during the sale process.<br>        Participating in meetings and implementing strategies to improve<br>        customer experience at Apple Store Opera.</p>
-<p><strong>Sales and Marketing Assistant at Autogrill du Louvre</strong> - july 2009 to june 2014 - Paris, France<br>        Managing business relationships and negotiating potential partnerships.<br>        Networking with a range of stakeholders and customers (agencies and groups of international tourists).<br>        Organising catering events for customers.<br>        Implementing and developing a commercial and communication strategy to increase sales.<br>        Conducting market studies. Organising and translating marketing material.<br>        Administrative work (planning and billing)</p>
-<p><strong>International Exchange Coordinator at OSEF Tourism</strong> - january 2012 to july 2013 - Part time - Paris, France<br>        It is an association that organises reciprocal student exchanges.<br>        Travelling and meeting academic institutions to find partnerships<br>        Coordinator and Tour guide in Europe and in Canada for our students</p>
-<hr>
-<ul>
-<li>description too long for the first two</li>
-<li>it is repeatitive</li>
-<li>could be more pushy, less bullshit</li>
-</ul>
+<p><strong>Sales and Marketing Assistant at Autogrill du Louvre</strong> - july 2009 to june 2014 - Paris, France<br>        Managing business relationships and negotiating potential partnerships.<br>        Networking with a range of stakeholders and customers (agencies and groups of international tourists).<br>        Organising catering events for customers.<br>        Implementing and developing a commercial and communication strategy to increase sales.<br>        Conducting market studies. Organising and translating marketing material.<br>        Various Administrative work (planning and billing)</p>
+<p><strong>International Exchange Coordinator at OSEF Tourism</strong> - january 2012 to july 2013 - Part time<br>        It is an association that organises reciprocal student exchanges.<br>        Travelling and meeting academic institutions to find partnerships<br>        Coordinator and Tour guide in Europe and in Canada for our students</p>
 <hr>
 <h3 id="education">Education</h3>
 <p><strong>Master&#39;s Degree &quot;Business Management&quot;</strong> <strong>2011 to 2012</strong><br>        Specialisation: International Tourism and Management<br>        University Paris 13 Nord - France </p>
